# django-render

./: manage.py  pyproject.toml  render.yaml
app/: query_vector.py  views.py
app/templates/app/: index.html  query_form.html
dogtraining/: asgi.py  settings.py  urls.py  wsgi.py
