[tool.poetry]
name = "dogtraining"
version = "0.1.0"
description = ""
authors = ["Sam <sammeehansam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.2"
whitenoise = {version = "5.2.0", extras = ["brotli"]}
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
